--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <script type="text/javascript" src="https://skyway.io/dist/adapter.js"></script>
     <script type="text/javascript" src="https://skyway.io/dist/0.3/peer.js"></script>
     <script type="text/javascript" src="https://skyway.io/dist/screenshare.js"></script>
-    <script src="https://skyway.io/dist/screenshare.js"></script>
     <script src="https://skyway.io/dist/screenshare.min.js"></script>
     <script type="text/javascript" src="app.js"></script>
+    <script type="text/javascript" src="key.js"></script>
 </head>
 
 <body>
