--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>SkyWay</title>
+    <title>GGez demo</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <link rel="stylesheet" href="style.css">
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
@@ -26,7 +26,7 @@
 
     <!-- Steps -->
     <div class="pure-u-1-3" id="control">
-        <h2>SkyWay Screen Share Demo</h2>
+        <h2>GGez demo</h2>
         <label>メディアリソース選択</label>
         <p><a href="#" class="pure-button pure-button-success" id="start-screen">スクリーンシェア</a></p>
         <p><label>Width : </label><input id="Width" size="5" value="640"></p>
